--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "devDependencies": {
     "babel-jest": "^26.6.3",
     "css-loader": "^5.0.1",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "fetch-mock": "^9.11.0",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
