--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "tailwindcss": "^2.0.2",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
-    "webpack-dev-middleware": "^3.7.2"
+    "webpack-dev-middleware": "^3.7.2",
+    "miragejs": "^0.1.41"
   },
   "devDependencies": {
     "babel-jest": "^26.6.3",
@@ -33,7 +34,6 @@
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.4",
-    "miragejs": "^0.1.41",
     "mutationobserver-shim": "^0.3.7",
     "node-fetch": "^2.6.1",
     "resolve-cwd": "^3.0.0"
