--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "author": "Cyrus Kiprop <cyruskiprop254@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.10.5",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "autoprefixer": "^10.2.3",
     "babel-loader": "^8.1.0",
     "chokidar": "^3.4.1",
     "express": "^4.17.1",
+    "miragejs": "^0.1.41",
     "postcss-cli": "^8.3.1",
     "postcss-loader": "^4.2.0",
     "stimulus": "^2.0.0",
@@ -21,8 +22,7 @@
     "tailwindcss": "^2.0.2",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
-    "webpack-dev-middleware": "^3.7.2",
-    "miragejs": "^0.1.41"
+    "webpack-dev-middleware": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "^26.6.3",
