--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Cyrus Kiprop <cyruskiprop254@gmail.com>",
   "license": "MIT",
   "scripts": {
-  "start": "node server.js"
+  "start": "node ./server.js"
 },
   "dependencies": {
     "@babel/core": "^7.10.5",
