--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Cyrus Kiprop <cyruskiprop254@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "start": "node server.js",
     "build": "webpack"
   },
   "dependencies": {
